fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@ body{
     padding: 0 ;
     margin: 0;
     width: 100vw;
+    overflow: hidden;
 }
